--- a/IKitaplik.BlazorUI/Components/Pages/Books/BookAdd.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Books/BookAdd.razor
@@ -71,29 +71,29 @@
     private IEnumerable<StudentGetDto> Students = new List<StudentGetDto>();
     protected override async Task OnInitializedAsync()
     {
-        var categories = await _categoryService.GetAllAsync();
+        var categories = await _categoryService.GetAllAsync(1,2000);
         if (categories.Success)
         {
-            Categories = categories.Data;
+            Categories = categories.Data.Items;
         }
         else
         {
             errorMessage = categories.Message;
         }
-        var writers = await _writerService.GetAllAsync();
+        var writers = await _writerService.GetAllAsync(1,2000);
         if (writers.Success)
         {
-            Writers = writers.Data;
+            Writers = writers.Data.Items;
         }
         else
         {
             errorMessage = writers.Message;
         }
 
-        var students = await _studentService.GetAllAsync();
+        var students = await _studentService.GetAllAsync(1,2000);
         if (students.Success)
         {
-            Students = students.Data;
+            Students = students.Data.Items;
         }
     }
 
