--- a/IKitaplik.BlazorUI/Components/Pages/Categories/CategoryList.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Categories/CategoryList.razor
@@ -6,14 +6,6 @@
 @inject MessageBoxService MessageBoxService
 @attribute [Authorize]
 
-@if (isLoading)
-{
-     <div class="position-absolute w-100 h-100 d-flex flex-column align-items-center bg-white justify-content-center" id="loading">
-        <img src="/images/Loading.gif" alt="Loading" />
-    </div>
-}
-else
-{
 
     <MudItem Class="mt-2 mb-2 text-end">
         <MudButton Href="category/add" Color="Color.Info" ButtonType="ButtonType.Button" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Add">
@@ -28,66 +20,58 @@ else
     }
     else
     {
-        <MudTable Items="@Items" Hover="true" ReadOnly="true" Filter="new Func<CategoryGetDto, bool>(FilterFunc)"
-                  SortLabel="Sort By" CommitEditTooltip="Commit Edit">
+
+        <MudDataGrid T="CategoryGetDto"
+                     @ref="_dataGrid"
+                     Filterable
+                     FilterCaseSensitivity="DataGridFilterCaseSensitivity.CaseInsensitive"
+                     ServerData="ServerReload"
+                     Loading="loading">
             <ToolBarContent>
                 <MudText Typo="Typo.h6">Kategoriler</MudText>
-                <MudSpacer />
-                <MudTextField @bind-Value="searchString" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
             </ToolBarContent>
-            <HeaderContent>
-                <MudTh><MudTableSortLabel SortBy="new Func<CategoryGetDto, object>(x => x.Id)">Nr</MudTableSortLabel></MudTh>
-                <MudTh><MudTableSortLabel SortBy="new Func<CategoryGetDto, object>(x => x.Name)">Kategori Adı</MudTableSortLabel></MudTh>
-                <MudTh>İşlemler</MudTh>
-            </HeaderContent>
-            <RowTemplate>
-                <MudTd DataLabel="Nr">@context.Id</MudTd>
-                <MudTd DataLabel="Barkod">@context.Name</MudTd>
-                <MudTd>
-                    <MudButtonGroup>
-                        <MudIconButton ButtonType="ButtonType.Button" OnClick="(() => CategoryUpdate(context.Id))" Color="Color.Warning" Icon="@Icons.Material.Filled.Update"></MudIconButton>
-                        <MudIconButton ButtonType="ButtonType.Button" OnClick=" (() => CategoryDelete(context.Id))" Color="Color.Error" Icon="@Icons.Material.Filled.Delete"></MudIconButton>
-                    </MudButtonGroup>
-                </MudTd>
-            </RowTemplate>
+            <Columns>
+                <TemplateColumn Title="İşlemler">
+                    <CellTemplate>
+                        <MudIconButton ButtonType="ButtonType.Button" OnClick="(() => CategoryUpdate(context.Item.Id))" Color="Color.Warning" Icon="@Icons.Material.Filled.Update"></MudIconButton>
+                        <MudIconButton ButtonType="ButtonType.Button" OnClick=" (() => CategoryDelete(context.Item.Id))" Color="Color.Error" Icon="@Icons.Material.Filled.Delete"></MudIconButton>
+                    </CellTemplate>
+                </TemplateColumn>
+                <PropertyColumn Property="b => b.Id" Title="Nr." />
+                <PropertyColumn Property="b => b.Name" Title="Barkod" />
+            </Columns>
             <PagerContent>
-                <MudTablePager />
+                <MudDataGridPager></MudDataGridPager>
             </PagerContent>
-        </MudTable>
+        </MudDataGrid>
     }
-
-}
 
 @code {
     private string errorMessage = string.Empty;
-    private string searchString = string.Empty;
-    IEnumerable<CategoryGetDto> Items = new List<CategoryGetDto>();
-    public bool isLoading { get; set; } = true;
-    protected override async Task OnAfterRenderAsync(bool firstRender)
+    bool loading = true;
+    MudDataGrid<CategoryGetDto> _dataGrid;
+    private async Task<GridData<CategoryGetDto>> ServerReload(GridState<CategoryGetDto> gridState)
     {
-        if (firstRender)
+        try
         {
-            var res = await _categoryService.GetAllAsync();
-            if (res.Success)
-            {
-                Items = res.Data.ToList();
-            }
-            else
+            loading = true;
+            var res = await _categoryService.GetAllAsync(gridState.Page + 1, gridState.PageSize);
+            if (!res.Success)
             {
                 errorMessage = res.Message;
+                return new GridData<CategoryGetDto>() { Items = new List<CategoryGetDto>(), TotalItems = 0 };
             }
-            isLoading = false;
+            return new GridData<CategoryGetDto>()
+            {
+                Items = res.Data.Items,
+                TotalItems = res.Data.TotalCount
+            };
+        }
+        finally
+        {
+            loading = false;
             StateHasChanged();
         }
-    }
-    private bool FilterFunc(CategoryGetDto item)
-    {
-        searchString = searchString?.Trim().ToLower() ?? "";
-        if (string.IsNullOrWhiteSpace(searchString))
-            return true;
-        if (item.Name.ToLower().Contains(searchString))
-            return true;
-        return false;
     }
     private async Task CategoryDelete(int id)
     {
@@ -98,19 +82,10 @@ else
             Snackbar.Add(res.Message, severity: res.Success ? Severity.Success : Severity.Error);
             if (res.Success)
             {
-                var res1 = await _categoryService.GetAllAsync();
-                if (res1.Success)
-                {
-                    Items = res1.Data.ToList();
-                    StateHasChanged();
-                }
-                else
-                {
-                    errorMessage = res1.Message;
-                }
+                await _dataGrid.ReloadServerData();
             }
-            StateHasChanged();
         }
+        StateHasChanged();
     }
     private async Task CategoryUpdate(int id)
     {
