--- a/IKitaplik.BlazorUI/Components/Pages/Movements/MovementList.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Movements/MovementList.razor
@@ -10,41 +10,30 @@
         <MudText>@errorMessage</MudText>
     </MudAlert>
 }
-else if (isLoading)
-{
-    <div class="position-absolute w-100 h-100 d-flex flex-column align-items-center bg-white justify-content-center" id="loading">
-        <img src="/images/Loading.gif" alt="Loading" />
-    </div>
-}
 else
 {
-    <MudTable Items="@Items" Hover="true" ReadOnly="true" Filter="new Func<MovementGetDTO, bool>(FilterFunc)"
-              SortLabel="Sort By" CommitEditTooltip="Commit Edit">
+
+    <MudDataGrid T="MovementGetDTO"
+                 @ref="_dataGrid"
+                 Filterable
+                 FilterCaseSensitivity="DataGridFilterCaseSensitivity.CaseInsensitive"
+                 ServerData="ServerReload"
+                 Loading="isLoading">
         <ToolBarContent>
             <MudText Typo="Typo.h6">Hareketler</MudText>
-            <MudSpacer />
-            <MudTextField @bind-Value="searchString" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
         </ToolBarContent>
-        <HeaderContent>
-            <MudTh><MudTableSortLabel SortBy="new Func<MovementGetDTO, object>(x => x.Id)">Nr</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<MovementGetDTO, object>(x => x.MovementDate)">Tarih</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<MovementGetDTO, object>(x => x.Title)">Başlık</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<MovementGetDTO, object>(x => x.Note)">Mesaj</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<MovementGetDTO, object>(x => x.BookName)">Kitap İsmi</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<MovementGetDTO, object>(x => x.StudentName)">Öğrenci İsmi</MudTableSortLabel></MudTh>
-        </HeaderContent>
-        <RowTemplate>
-            <MudTd DataLabel="Nr">@context.Id</MudTd>
-            <MudTd DataLabel="Barkod">@context.MovementDate.ToString("dd.MM.yyyy HH:mm")</MudTd>
-            <MudTd DataLabel="Barkod">@context.Title</MudTd>
-            <MudTd DataLabel="Barkod">@context.Note</MudTd>
-            <MudTd DataLabel="Barkod">@context.BookName</MudTd>
-            <MudTd DataLabel="Barkod">@context.StudentName</MudTd>
-        </RowTemplate>
+        <Columns>
+            <PropertyColumn Property="b => b.Id" Title="Nr." />
+            <PropertyColumn Property="@(b => b.MovementDate.ToString("dd.MM.yyyy HH:mm"))" Title="Tarih" />
+            <PropertyColumn Property="b => b.Title" Title="Konu" />
+            <PropertyColumn Property="b => b.Note" Title="Not" />
+            <PropertyColumn Property="b => b.BookName" Title="Kitap" />
+            <PropertyColumn Property="b => b.StudentName" Title="Öğrenci" />
+        </Columns>
         <PagerContent>
-            <MudTablePager />
+            <MudDataGridPager></MudDataGridPager>
         </PagerContent>
-    </MudTable>
+    </MudDataGrid>
 }
 
 @code {
@@ -52,77 +41,89 @@ else
     public int Type { get; set; }
     [Parameter]
     public int Id { get; set; }
-
     public bool isLoading { get; set; } = false;
+    private string errorMessage = "";
+    private MudDataGrid<MovementGetDTO> _dataGrid;
 
-    private string errorMessage = "", searchString = "";
-    private List<MovementGetDTO> Items = new List<MovementGetDTO>();
 
-    protected override async Task OnAfterRenderAsync(bool firstRender)
+    private async Task<GridData<MovementGetDTO>> ServerReload(GridState<MovementGetDTO> gridState)
     {
-        if (firstRender)
+        try
         {
             isLoading = true;
+            List<MovementGetDTO> Items = new List<MovementGetDTO>();
+            int TotalItems = 0;
             if ((int)MovementType.Deposit == Type)
             {
-                var res = await _service.GetAllByDepositIdAsync(Id);
+                var res = await _service.GetAllByDepositIdAsync(Id,gridState.Page + 1,gridState.PageSize);
                 if (!res.Success)
                 {
                     errorMessage = res.Message;
-                    return;
+                    return new GridData<MovementGetDTO>
+                    {
+                        Items = new List<MovementGetDTO>(),
+                        TotalItems = 0
+                    };
                 }
-                Items = res.Data;
+                Items = res.Data.Items;
             }
             else if ((int)MovementType.Book == Type)
             {
-                var res = await _service.GetAllByBookIdAsync(Id);
+                var res = await _service.GetAllByBookIdAsync(Id, gridState.Page + 1, gridState.PageSize);
                 if (!res.Success)
                 {
                     errorMessage = res.Message;
-                    return;
+                    return new GridData<MovementGetDTO>
+                    {
+                        Items = new List<MovementGetDTO>(),
+                        TotalItems = 0
+                    };
                 }
-                Items = res.Data;
+                Items = res.Data.Items;
             }
             else if ((int)MovementType.Student == Type)
             {
-                var res = await _service.GetAllByStudentIdAsync(Id);
+                var res = await _service.GetAllByStudentIdAsync(Id, gridState.Page + 1, gridState.PageSize);
                 if (!res.Success)
                 {
                     errorMessage = res.Message;
-                    return;
+                    return new GridData<MovementGetDTO>
+                    {
+                        Items = new List<MovementGetDTO>(),
+                        TotalItems = 0
+                    };
                 }
-                Items = res.Data;
+                Items = res.Data.Items;
             }
             else if ((int)MovementType.Donation == Type)
             {
-                var res = await _service.GetAllByDonationIdAsync(Id);
+                var res = await _service.GetAllByDonationIdAsync(Id, gridState.Page + 1, gridState.PageSize);
                 if (!res.Success)
                 {
                     errorMessage = res.Message;
-                    return;
+                    return new GridData<MovementGetDTO>
+                    {
+                        Items = new List<MovementGetDTO>(),
+                        TotalItems = 0
+                    };
                 }
-                Items = res.Data;
+                Items = res.Data.Items;
             }
             else
             {
                 errorMessage = "Geçersiz tip";
             }
+
+            return new GridData<MovementGetDTO>
+            {
+                Items = Items,
+                TotalItems = Items.Count
+            };
+        }
+        finally
+        {
             isLoading = false;
             StateHasChanged();
         }
-    }
-
-    private bool FilterFunc(MovementGetDTO item)
-    {
-        searchString = searchString?.Trim().ToLower() ?? "";
-        if (string.IsNullOrWhiteSpace(searchString))
-            return true;
-        if (item.BookName.ToLower().Contains(searchString))
-            return true;
-        if (item.StudentName.ToLower().Contains(searchString))
-            return true;
-        if (item.Title.ToLower().Contains(searchString))
-            return true;
-        return false;
     }
 }
