--- a/IKitaplik.BlazorUI/Components/Pages/Students/StudentList.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Students/StudentList.razor
@@ -6,109 +6,88 @@
 @inject NavigationManager Nav
 @attribute [Authorize]
 
-@if (isLoading)
+
+
+<MudItem Class="mt-2 mb-2 text-end">
+    <MudButton Href="student/add" Color="Color.Info" ButtonType="ButtonType.Button" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Add">
+        Yeni Öğrenci Ekle
+    </MudButton>
+</MudItem>
+@if (!string.IsNullOrEmpty(errorMessage))
 {
-     <div class="position-absolute w-100 h-100 d-flex flex-column align-items-center bg-white justify-content-center" id="loading">
-        <img src="/images/Loading.gif" alt="Loading" />
-    </div>
+    <MudAlert Severity="Severity.Error" Class="m-4" CloseIcon="@Icons.Material.Filled.Close">
+        <MudText>@errorMessage</MudText>
+    </MudAlert>
 }
 else
 {
-
-    <MudItem Class="mt-2 mb-2 text-end">
-        <MudButton Href="student/add" Color="Color.Info" ButtonType="ButtonType.Button" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Add">
-            Yeni Öğrenci Ekle
-        </MudButton>
-    </MudItem>
-    @if (!string.IsNullOrEmpty(errorMessage))
-    {
-        <MudAlert Severity="Severity.Error" Class="m-4" CloseIcon="@Icons.Material.Filled.Close">
-            <MudText>@errorMessage</MudText>
-        </MudAlert>
-    }
-    else
-    {
-        <MudTable Items="@Items" Hover="true" ReadOnly="true" Filter="new Func<StudentGetDto, bool>(FilterFunc)"
-                  SortLabel="Sort By" CommitEditTooltip="Commit Edit">
-            <ToolBarContent>
-                <MudText Typo="Typo.h6">Öğrenciler</MudText>
-                <MudSpacer />
-                <MudTextField @bind-Value="searchString" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
-            </ToolBarContent>
-            <HeaderContent>
-                <MudTh><MudTableSortLabel SortBy="new Func<StudentGetDto, object>(x => x.Id)">Nr</MudTableSortLabel></MudTh>
-                <MudTh><MudTableSortLabel SortBy="new Func<StudentGetDto, object>(x => x.StudentNumber)">Öğrenci Numarası</MudTableSortLabel></MudTh>
-                <MudTh><MudTableSortLabel SortBy="new Func<StudentGetDto, object>(x => x.Class)">Sınıfı</MudTableSortLabel></MudTh>
-                <MudTh><MudTableSortLabel SortBy="new Func<StudentGetDto, object>(x => x.Name)">İsmi</MudTableSortLabel></MudTh>
-                <MudTh><MudTableSortLabel SortBy="new Func<StudentGetDto, object>(x => x.EMail)">EMail</MudTableSortLabel></MudTh>
-                <MudTh><MudTableSortLabel SortBy="new Func<StudentGetDto, object>(x => x.Situation)">Kitap Okuyormu</MudTableSortLabel></MudTh>
-                <MudTh><MudTableSortLabel SortBy="new Func<StudentGetDto, object>(x => x.NumberofBooksRead)">Okuduğu Kitap Sayısı</MudTableSortLabel></MudTh>
-                <MudTh><MudTableSortLabel SortBy="new Func<StudentGetDto, object>(x => x.TelephoneNumber)">Telefon Numarası</MudTableSortLabel></MudTh>
-                <MudTh><MudTableSortLabel SortBy="new Func<StudentGetDto, object>(x => x.Point)">Puan</MudTableSortLabel></MudTh>
-                <MudTh>İşlemler</MudTh>
-            </HeaderContent>
-            <RowTemplate>
-                <MudTd DataLabel="Nr">@context.Id</MudTd>
-                <MudTd DataLabel="Öğrenci Numarası">@context.StudentNumber</MudTd>
-                <MudTd DataLabel="Sınıf">@context.Class</MudTd>
-                <MudTd DataLabel="İsim">@context.Name</MudTd>
-                <MudTd DataLabel="Email">@context.EMail</MudTd>
-                <MudTd DataLabel="Kitap Okuyormu">@(context.Situation ? "Hayır" : "Evet")</MudTd>
-                <MudTd DataLabel="Okuduğu Kitap Sayısı">@context.NumberofBooksRead</MudTd>
-                <MudTd DataLabel="Telefon Numarası">@context.TelephoneNumber</MudTd>
-                <MudTd DataLabel="Puan">@context.Point</MudTd>
-                <MudTd>
+    <MudDataGrid T="StudentGetDto"
+                 @ref="_dataGrid"
+                 Filterable
+                 FilterCaseSensitivity="DataGridFilterCaseSensitivity.CaseInsensitive"
+                 ServerData="ServerReload"
+                 Loading="isLoading">
+        <ToolBarContent>
+            <MudText Typo="Typo.h6">Öğrenciler</MudText>
+        </ToolBarContent>
+        <Columns>
+            <TemplateColumn Title="İşlemler">
+                <CellTemplate>
                     <MudButtonGroup>
-                        <MudIconButton ButtonType="ButtonType.Button" OnClick="(() => StudentUpdate(context.Id))" Color="Color.Warning" Icon="@Icons.Material.Filled.Update"></MudIconButton>
-                        <MudIconButton ButtonType="ButtonType.Button" OnClick=" (() => StudentDelete(context.Id))" Color="Color.Error" Icon="@Icons.Material.Filled.Delete"></MudIconButton>
-                        <MudIconButton ButtonType="ButtonType.Button" OnClick="(() => GoMovements(context.Id))" Color="Color.Secondary" Icon="@Icons.Material.Filled.ViewList"></MudIconButton>
+                        <MudIconButton ButtonType="ButtonType.Button" OnClick="(() => StudentUpdate(context.Item.Id))" Color="Color.Warning" Icon="@Icons.Material.Filled.Update"></MudIconButton>
+                        <MudIconButton ButtonType="ButtonType.Button" OnClick=" (() => StudentDelete(context.Item.Id))" Color="Color.Error" Icon="@Icons.Material.Filled.Delete"></MudIconButton>
+                        <MudIconButton ButtonType="ButtonType.Button" OnClick=" (() => GoMovements(context.Item.Id))" Color="Color.Secondary" Icon="@Icons.Material.Filled.ViewList"></MudIconButton>
                     </MudButtonGroup>
-                </MudTd>
-            </RowTemplate>
-            <PagerContent>
-                <MudTablePager />
-            </PagerContent>
-        </MudTable>
-    }
-
+                </CellTemplate>
+            </TemplateColumn>
+            <PropertyColumn Property="b => b.Id" Title="Nr." />
+            <PropertyColumn Property="b => b.StudentNumber" Title="Öğrenci No" />
+            <PropertyColumn Property="b => b.Class" Title="Sınıf" />
+            <PropertyColumn Property="b => b.Name" Title="İsim" />
+            <PropertyColumn Property="b => b.EMail" Title="Email" />
+            <PropertyColumn Property="@(b => b.Situation ? "Hayır" : "Evet")" Title="Kitap Okuyormu" />
+            <PropertyColumn Property="b => b.NumberofBooksRead" Title="Okuduğu Kitap Sayısı" />
+            <PropertyColumn Property="b => b.TelephoneNumber" Title="Telefon No" />
+            <PropertyColumn Property="b => b.Point" Title="Puan" />
+        </Columns>
+        <PagerContent>
+            <MudDataGridPager></MudDataGridPager>
+        </PagerContent>
+    </MudDataGrid>
 }
 
 @code {
+    MudDataGrid<StudentGetDto> _dataGrid;
     private string errorMessage = string.Empty;
-    private string searchString = string.Empty;
-    IEnumerable<StudentGetDto> Items = new List<StudentGetDto>();
     public bool isLoading { get; set; } = true;
-    protected override async Task OnAfterRenderAsync(bool firstRender)
+
+    private async Task<GridData<StudentGetDto>> ServerReload(GridState<StudentGetDto> gridState)
     {
-        if (firstRender)
+        try
         {
-            var res = await _studentService.GetAllAsync();
-            if (res.Success)
-            {
-                Items = res.Data.ToList();
-            }
-            else
+            isLoading = true;
+            var res = await _studentService.GetAllAsync(gridState.Page + 1, gridState.PageSize);
+            if (!res.Success)
             {
                 errorMessage = res.Message;
+                return new GridData<StudentGetDto>() { Items = new List<StudentGetDto>(), TotalItems = 0 };
             }
+            return new GridData<StudentGetDto>()
+            {
+                Items = res.Data.Items,
+                TotalItems = res.Data.TotalCount
+            };
+        }
+        finally
+        {
             isLoading = false;
             StateHasChanged();
         }
     }
+
     private void GoMovements(int id)
     {
         Nav.NavigateTo("/movements/3&" + id);
-    }
-    private bool FilterFunc(StudentGetDto item)
-    {
-        searchString = searchString?.Trim().ToLower() ?? "";
-        if (string.IsNullOrWhiteSpace(searchString))
-            return true;
-        if (item.Name.ToLower().Contains(searchString))
-            return true;
-        if (item.StudentNumber.ToString().Contains(searchString))
-            return true;
-        return false;
     }
     private async Task StudentDelete(int id)
     {
@@ -119,16 +98,7 @@ else
             Snackbar.Add(res.Message, severity: res.Success ? Severity.Success : Severity.Error);
             if (res.Success)
             {
-                var res1 = await _studentService.GetAllAsync();
-                if (res1.Success)
-                {
-                    Items = res1.Data.ToList();
-                    StateHasChanged();
-                }
-                else
-                {
-                    errorMessage = res1.Message;
-                }
+                await _dataGrid.ReloadServerData();
             }
             StateHasChanged();
         }
